build/generated-src/antlr/main/com/alloyprofiling/ALLOYParser.java
// Generated from com\alloyprofiling\ALLOY.g4 by ANTLR 4.7.1

 package com.alloyprofiling;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ALLOYParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		DIGIT=81, ID=82, ALPHA=83, WS=84, COMMENT=85, LINE_COMMENT=86, STRING=87;
	public static final int
		RULE_specification = 0, RULE_module = 1, RULE_names_opt = 2, RULE_as_name_opt = 3, 
		RULE_para_open = 4, RULE_open = 5, RULE_macro_expr = 6, RULE_macro = 7, 
		RULE_paragraph = 8, RULE_factDecl = 9, RULE_name_opt = 10, RULE_assertDecl = 11, 
		RULE_nameID = 12, RULE_decls_f = 13, RULE_funExpr = 14, RULE_funDecl = 15, 
		RULE_nameOrBlock = 16, RULE_name_cmd_opt = 17, RULE_scope_opt = 18, RULE_run_or_check = 19, 
		RULE_cmdDecl = 20, RULE_paraDecls = 21, RULE_paraDecls_opt = 22, RULE_predDecl = 23, 
		RULE_typescopes = 24, RULE_but_typescopes = 25, RULE_expect_digit = 26, 
		RULE_scope = 27, RULE_exactly_opt = 28, RULE_typescope = 29, RULE_decls = 30, 
		RULE_multiplicity = 31, RULE_abs = 32, RULE_priv = 33, RULE_abs_multiplicity = 34, 
		RULE_sigDecl = 35, RULE_names = 36, RULE_enumDecl = 37, RULE_mult = 38, 
		RULE_union = 39, RULE_superSet = 40, RULE_sigExt = 41, RULE_sigExtension = 42, 
		RULE_exprs = 43, RULE_notOp = 44, RULE_decls_e = 45, RULE_expr = 46, RULE_num = 47, 
		RULE_const_sets = 48, RULE_constant = 49, RULE_disjFunc = 50, RULE_disjoint = 51, 
		RULE_disj = 52, RULE_comma_opt = 53, RULE_decl = 54, RULE_letDecl = 55, 
		RULE_quant = 56, RULE_setCard = 57, RULE_tcOp = 58, RULE_unOp = 59, RULE_bit_shifter_operators = 60, 
		RULE_dotOp = 61, RULE_add = 62, RULE_sub = 63, RULE_binOp = 64, RULE_mult_or_set = 65, 
		RULE_arrowOp = 66, RULE_rel_operators = 67, RULE_compareOp = 68, RULE_block = 69, 
		RULE_block_opt = 70, RULE_blockOrBar = 71, RULE_bar = 72, RULE_name = 73, 
		RULE_number = 74;
	public static final String[] ruleNames = {
		"specification", "module", "names_opt", "as_name_opt", "para_open", "open", 
		"macro_expr", "macro", "paragraph", "factDecl", "name_opt", "assertDecl", 
		"nameID", "decls_f", "funExpr", "funDecl", "nameOrBlock", "name_cmd_opt", 
		"scope_opt", "run_or_check", "cmdDecl", "paraDecls", "paraDecls_opt", 
		"predDecl", "typescopes", "but_typescopes", "expect_digit", "scope", "exactly_opt", 
		"typescope", "decls", "multiplicity", "abs", "priv", "abs_multiplicity", 
		"sigDecl", "names", "enumDecl", "mult", "union", "superSet", "sigExt", 
		"sigExtension", "exprs", "notOp", "decls_e", "expr", "num", "const_sets", 
		"constant", "disjFunc", "disjoint", "disj", "comma_opt", "decl", "letDecl", 
		"quant", "setCard", "tcOp", "unOp", "bit_shifter_operators", "dotOp", 
		"add", "sub", "binOp", "mult_or_set", "arrowOp", "rel_operators", "compareOp", 
		"block", "block_opt", "blockOrBar", "bar", "name", "number"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'module'", "'['", "'exactly'", "','", "']'", "'as'", "'open'", 
		"'='", "'{'", "'}'", "'let'", "'fact'", "'assert'", "'.'", "'fun'", "':'", 
		"'run'", "'check'", "'('", "')'", "'private'", "'pred'", "'but'", "'expect'", 
		"'for'", "'seq'", "'int'", "'abstract'", "'sig'", "'enum'", "'lone'", 
		"'one'", "'some'", "'+'", "'extends'", "'in'", "'!'", "'not'", "'=>'", 
		"'implies'", "'else'", "'sum'", "'seq/Int'", "'@'", "'this'", "'-'", "'none'", 
		"'univ'", "'iden'", "'disj'", "'disjoint'", "'all'", "'no'", "'#'", "'*'", 
		"'^'", "'set'", "'~'", "'<<'", "'>>'", "'>>>'", "'||'", "'or'", "'&&'", 
		"'and'", "'<=>'", "'iff'", "'&'", "'++'", "'<:'", "':>'", "'->'", "'<'", 
		"'>'", "'=<'", "'>='", "'<='", "'|'", "'this/'", "'/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "DIGIT", "ID", "ALPHA", 
		"WS", "COMMENT", "LINE_COMMENT", "STRING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ALLOY.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ALLOYParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SpecificationContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ALLOYParser.EOF, 0); }
		public List<ModuleContext> module() {
			return getRuleContexts(ModuleContext.class);
		}
		public ModuleContext module(int i) {
			return getRuleContext(ModuleContext.class,i);
		}
		public List<OpenContext> open() {
			return getRuleContexts(OpenContext.class);
		}
		public OpenContext open(int i) {
			return getRuleContext(OpenContext.class,i);
		}
		public List<ParagraphContext> paragraph() {
			return getRuleContexts(ParagraphContext.class);
		}
		public ParagraphContext paragraph(int i) {
			return getRuleContext(ParagraphContext.class,i);
		}
		public SpecificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterSpecification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitSpecification(this);
		}
	}

	public final SpecificationContext specification() throws RecognitionException {
		SpecificationContext _localctx = new SpecificationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_specification);
		int _la;
		try {
			int _alt;
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(150);
					module();
					}
					break;
				}
				setState(156);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(153);
						open();
						}
						} 
					}
					setState(158);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(159);
					module();
					}
				}

				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__16) | (1L << T__17) | (1L << T__20) | (1L << T__21) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32))) != 0) || _la==T__78 || _la==ID) {
					{
					{
					setState(162);
					paragraph();
					}
					}
					setState(167);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(168);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitModule(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(T__0);
			setState(173);
			name();
			setState(191);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(174);
				match(T__1);
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(175);
					match(T__2);
					}
				}

				setState(178);
				name();
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(179);
					match(T__3);
					setState(181);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__2) {
						{
						setState(180);
						match(T__2);
						}
					}

					setState(183);
					name();
					}
					}
					setState(188);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(189);
				match(T__4);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Names_optContext extends ParserRuleContext {
		public NamesContext names() {
			return getRuleContext(NamesContext.class,0);
		}
		public Names_optContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_names_opt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterNames_opt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitNames_opt(this);
		}
	}

	public final Names_optContext names_opt() throws RecognitionException {
		Names_optContext _localctx = new Names_optContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_names_opt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__78 || _la==ID) {
				{
				setState(193);
				names();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class As_name_optContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public As_name_optContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_as_name_opt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterAs_name_opt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitAs_name_opt(this);
		}
	}

	public final As_name_optContext as_name_opt() throws RecognitionException {
		As_name_optContext _localctx = new As_name_optContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_as_name_opt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(196);
				match(T__5);
				setState(197);
				name();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Para_openContext extends ParserRuleContext {
		public Names_optContext names_opt() {
			return getRuleContext(Names_optContext.class,0);
		}
		public Para_openContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_para_open; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterPara_open(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitPara_open(this);
		}
	}

	public final Para_openContext para_open() throws RecognitionException {
		Para_openContext _localctx = new Para_openContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_para_open);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(200);
				match(T__1);
				setState(201);
				names_opt();
				setState(202);
				match(T__4);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpenContext extends ParserRuleContext {
		public PrivContext priv() {
			return getRuleContext(PrivContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Para_openContext para_open() {
			return getRuleContext(Para_openContext.class,0);
		}
		public As_name_optContext as_name_opt() {
			return getRuleContext(As_name_optContext.class,0);
		}
		public OpenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_open; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterOpen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitOpen(this);
		}
	}

	public final OpenContext open() throws RecognitionException {
		OpenContext _localctx = new OpenContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_open);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			priv();
			setState(207);
			match(T__6);
			setState(208);
			name();
			setState(209);
			para_open();
			setState(210);
			as_name_opt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Macro_exprContext extends ParserRuleContext {
		public DeclsContext decls() {
			return getRuleContext(DeclsContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Macro_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterMacro_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitMacro_expr(this);
		}
	}

	public final Macro_exprContext macro_expr() throws RecognitionException {
		Macro_exprContext _localctx = new Macro_exprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_macro_expr);
		int _la;
		try {
			setState(231);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(213);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__7) {
					{
					setState(212);
					match(T__7);
					}
				}

				setState(215);
				match(T__8);
				setState(223);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(219);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__10) | (1L << T__18) | (1L << T__25) | (1L << T__26) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__36) | (1L << T__37) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__51) | (1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57))) != 0) || ((((_la - 79)) & ~0x3f) == 0 && ((1L << (_la - 79)) & ((1L << (T__78 - 79)) | (1L << (DIGIT - 79)) | (1L << (ID - 79)) | (1L << (STRING - 79)))) != 0)) {
						{
						{
						setState(216);
						expr(0);
						}
						}
						setState(221);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				case 2:
					{
					setState(222);
					decls();
					}
					break;
				}
				setState(225);
				match(T__9);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(226);
				match(T__7);
				setState(229);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(227);
					expr(0);
					}
					break;
				case 2:
					{
					setState(228);
					decls();
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MacroContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Macro_exprContext macro_expr() {
			return getRuleContext(Macro_exprContext.class,0);
		}
		public NamesContext names() {
			return getRuleContext(NamesContext.class,0);
		}
		public MacroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterMacro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitMacro(this);
		}
	}

	public final MacroContext macro() throws RecognitionException {
		MacroContext _localctx = new MacroContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_macro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(233);
			match(T__10);
			setState(234);
			name();
			setState(239);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(235);
				match(T__1);
				setState(236);
				names();
				setState(237);
				match(T__4);
				}
			}

			setState(241);
			macro_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParagraphContext extends ParserRuleContext {
		public FactDeclContext factDecl() {
			return getRuleContext(FactDeclContext.class,0);
		}
		public AssertDeclContext assertDecl() {
			return getRuleContext(AssertDeclContext.class,0);
		}
		public FunDeclContext funDecl() {
			return getRuleContext(FunDeclContext.class,0);
		}
		public CmdDeclContext cmdDecl() {
			return getRuleContext(CmdDeclContext.class,0);
		}
		public EnumDeclContext enumDecl() {
			return getRuleContext(EnumDeclContext.class,0);
		}
		public SigDeclContext sigDecl() {
			return getRuleContext(SigDeclContext.class,0);
		}
		public PredDeclContext predDecl() {
			return getRuleContext(PredDeclContext.class,0);
		}
		public MacroContext macro() {
			return getRuleContext(MacroContext.class,0);
		}
		public ParagraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paragraph; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterParagraph(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitParagraph(this);
		}
	}

	public final ParagraphContext paragraph() throws RecognitionException {
		ParagraphContext _localctx = new ParagraphContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_paragraph);
		try {
			setState(251);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(243);
				factDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(244);
				assertDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(245);
				funDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(246);
				cmdDecl();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(247);
				enumDecl();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(248);
				sigDecl();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(249);
				predDecl();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(250);
				macro();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactDeclContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public FactDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterFactDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitFactDecl(this);
		}
	}

	public final FactDeclContext factDecl() throws RecognitionException {
		FactDeclContext _localctx = new FactDeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_factDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(253);
			match(T__11);
			setState(255);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__78 || _la==ID) {
				{
				setState(254);
				name();
				}
			}

			setState(257);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Name_optContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Name_optContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name_opt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterName_opt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitName_opt(this);
		}
	}

	public final Name_optContext name_opt() throws RecognitionException {
		Name_optContext _localctx = new Name_optContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_name_opt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(260);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__78 || _la==ID) {
				{
				setState(259);
				name();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
